--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -5,6 +5,7 @@ esloc.date.folder=yyyy-MM-dd
 esloc.date.view=dd/MM/yyyy
 esloc.date.form=yyyy-MM-dd
 esloc.date.key=yyyyMMddHHmm
+esloc.date.front=ddMMyyyy
 
 # caminho para salvar arquivos
 servicos.atendimentos.raiz=C:\\jp\\atendimentos
