--- a/bin/src/main/resources/application-dev.properties
+++ b/bin/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.datasource.url=jdbc:h2:mem:devdb
