--- a/bin/src/main/resources/application-test.properties
+++ b/bin/src/main/resources/application-test.properties
@@ -1,8 +1,12 @@
+# MySQL
+# exibe os comandos SQL
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=false
+
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=jacare
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://192.168.0.109:3306/eslocdbtest?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&useLegacyDatetimeCode=false
+spring.datasource.username=esloctaru
+spring.datasource.password=#H0864#@
+
