--- a/src/main/resources/application-hq.properties
+++ b/src/main/resources/application-hq.properties
@@ -1,1 +1,13 @@
+# MySQL
+# exibe os comandos SQL
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=false
 
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/eslocdb?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&useLegacyDatetimeCode=false
+spring.datasource.username=esloctaru
+spring.datasource.password=#H0864#@
