--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,7 +4,10 @@ spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
 
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/eslocdb?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&useLegacyDatetimeCode=false
-spring.datasource.username=esloctaru
-spring.datasource.password=#H0864#@
+spring.datasource.url=jdbc:mysql://192.168.0.105:3306/eslocdb?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=pirulinga5@
