--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ esloc.date.front=ddMMyyyy
 servicos.atendimentos.raiz=C:\\jp\\atendimentos
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# JWT
+security.jwt.expiracao=60
+security.jwt.chave-assinatura=amFjYXJl
