controller envio de arquivos e autenticação concluida

--- a/src/main/resources/application-hq.properties
+++ b/src/main/resources/application-hq.properties
@@ -1,13 +1,19 @@
 # MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/eslocdb?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&useLegacyDatetimeCode=false
+spring.datasource.username=esloctaru
+spring.datasource.password=#H0864#@
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
+
+
 # exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+## This is important
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = none
 
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/eslocdb?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&useLegacyDatetimeCode=false
-spring.datasource.username=esloctaru
-spring.datasource.password=#H0864#@
