--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.servlet.multipart.max-request-size=10MB
 # JWT
 security.jwt.expiracao=60
 security.jwt.chave-assinatura=amFjYXJl
+
+#Enable Flyway
+spring.flyway.enabled=true
