--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=hq
 
 #Formatos de data para uso do sistema
 esloc.date.folder=yyyy-MM-dd
@@ -11,3 +11,10 @@ esloc.date.front=ddMMyyyy
 servicos.atendimentos.raiz=C:\\jp\\atendimentos
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# JWT
+security.jwt.expiracao=60
+security.jwt.chave-assinatura=amFjYXJl
+
+#Enable Flyway
+spring.flyway.enabled=true
