--- a/src/main/resources/application-hq.properties
+++ b/src/main/resources/application-hq.properties
@@ -1,5 +1,5 @@
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/eslocdb?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/jp-esloc?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&useLegacyDatetimeCode=false
 spring.datasource.username=esloctaru
 spring.datasource.password=#H0864#@
 
