--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,6 +8,6 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://192.168.0.105:3306/eslocdb?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://192.168.0.105:3306/jp-esloc?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=pirulinga5@
